<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.itextpdf</groupId>
    <artifactId>root</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>iText 6 (Arya)</name>
    <url>http://itextpdf.com/</url>

    <organization>
        <name>iText Group NV</name>
        <url>http://itextpdf.com/</url>
    </organization>

    <scm>
        <connection>scm:git:git@gitlab.itextsupport.com:itext6/itextpdf.git</connection>
        <url>scm:git:git@gitlab.itextsupport.com:itext6/itextpdf.git</url>
    </scm>

    <modules>
        <module>basics</module>
        <module>core</module>
        <module>model</module>
        <module>forms</module>
        <module>sign</module>
        <module>parsing</module>
        <module>barcodes</module>
        <module>pdfa</module>
        
        <module>pdftest</module>
        
        <module>hyph</module>
        
        
    </modules>

    <properties>
        <bouncycastle.version>1.49</bouncycastle.version>
        <checkstyle.version>2.15</checkstyle.version>
        <findbugs.version>3.0.1</findbugs.version>
        <fb-contrib.version>6.2.1</fb-contrib.version>
        <itext.legacy.version>5.5.8</itext.legacy.version>
        <java.version>1.7</java.version>
        <junit.version>4.12</junit.version>
        <junitparams.version>1.0.4</junitparams.version>
        <pmd.version>3.5</pmd.version>
        <slf4j.version>1.7.13</slf4j.version>
        <surefire.version>2.18.1</surefire.version>
        <failsafe.version>2.18.1</failsafe.version>
        <jacoco.version>0.7.5.201505241946</jacoco.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <integrationtests>com.itextpdf.test.annotations.type.IntegrationTest</integrationtests>
        <performancetests>com.itextpdf.test.annotations.type.PerformanceTest</performancetests>
        <sampletests>com.itextpdf.test.annotations.type.SampleTest</sampletests>
        <unittests>com.itextpdf.test.annotations.type.UnitTest</unittests>
        <logback.version>1.1.3</logback.version>
        <jfreechart.version>1.0.19</jfreechart.version>
        <hsqldb.version>2.3.3</hsqldb.version>
    </properties>

    <dependencies>
         <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>pl.pragmatists</groupId>
            <artifactId>JUnitParams</artifactId>
            <version>${junitparams.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.3</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <!-- Run unit tests -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${surefire.version}</version>
                <dependencies>
                    <dependency>
                        <groupId>org.apache.maven.surefire</groupId>
                        <artifactId>surefire-junit47</artifactId>
                        <version>${surefire.version}</version>
                        <scope>compile</scope>
                    </dependency>
                </dependencies>
                <configuration>
                    <includes>
                        <include>**/*Test.java</include>
                    </includes>
                    <parallel>methods</parallel>
                    <threadCount>10</threadCount>
                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                </configuration>
            </plugin>
            <!-- Run integration tests -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>${failsafe.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
                    <argLine>${jacoco.agent.argLine}</argLine>
<!--                    <parallel>methods</parallel>    -->
                    <threadCount>1</threadCount>
                </configuration>
            </plugin>
            <!--
                Compute integration test coverage for Sonar
                BEWARE: Sonar doesn't run the verify phase, it has to be forced by setting -Dsonar.phase=verify
            -->
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.version}</version>
                <configuration>
                    <propertyName>jacoco.agent.argLine</propertyName> <!-- default: argLine -->
                    <includes>
                        <include>com/itextpdf/**</include>
                    </includes>
                    <destFile>${project.build.directory}/jacoco-integration.exec</destFile> <!-- agent -->
                    <dataFile>${project.build.directory}/jacoco-integration.exec</dataFile> <!-- report -->
                </configuration>
                <executions>
                    <execution>
                        <id>agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>site</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>${checkstyle.version}</version>
                <executions>
                    <execution>
                        <id>validate</id>
                        <phase>validate</phase>
                        <configuration>
                            <consoleOutput>true</consoleOutput>
                            <failOnViolation>false</failOnViolation>
                            <failsOnError>false</failsOnError>
                            <linkXRef>false</linkXRef>
                        </configuration>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-pmd-plugin</artifactId>
                <version>${pmd.version}</version>
                <executions>
                    <execution>
                        <id>validate</id>
                        <phase>validate</phase>
                        <configuration>
                            <consoleOutput>true</consoleOutput>
                            <failOnViolation>false</failOnViolation>
                            <failsOnError>false</failsOnError>
                            <linkXRef>false</linkXRef>
                        </configuration>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>findbugs-maven-plugin</artifactId>
                <version>${findbugs.version}</version>
                <configuration>
                    <effort>Max</effort>
                    <threshold>Low</threshold>
                    <xmlOutput>true</xmlOutput>
                    <failOnError>false</failOnError>
                    <plugins>
                        <plugin>
                            <groupId>com.mebigfatguy.fb-contrib</groupId>
                            <artifactId>fb-contrib</artifactId>
                            <version>${fb-contrib.version}</version>
                        </plugin>
                    </plugins>
                </configuration>
                <executions>
                    <execution>
                        <phase>verify</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.pitest</groupId>
                <artifactId>pitest-maven</artifactId>
                <version>1.1.8</version>
                <configuration>
                    <targetClasses>
                        <param>com.itextpdf*</param>
                    </targetClasses>
                    <targetTests>
                        <param>com.itextpdf*</param>
                    </targetTests>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-project-info-reports-plugin</artifactId>
                <version>2.8</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-report-plugin</artifactId>
                <version>${surefire.version}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>${checkstyle.version}</version>
                <configuration>
                    <linkXref>true</linkXref>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-pmd-plugin</artifactId>
                <version>${pmd.version}</version>
                <configuration>
                    <linkXref>true</linkXref>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>findbugs-maven-plugin</artifactId>
                <version>${findbugs.version}</version>
                <configuration>
                    <effort>Max</effort>
                    <threshold>Low</threshold>
                    <xmlOutput>true</xmlOutput>
                    <plugins>
                        <plugin>
                            <groupId>com.mebigfatguy.fb-contrib</groupId>
                            <artifactId>fb-contrib</artifactId>
                            <version>${fb-contrib.version}</version>
                        </plugin>
                    </plugins>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>2.10.3</version>
                <configuration>
                    <additionalparam>${javadoc.doclint.none}</additionalparam>
                    <quiet>true</quiet>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.soebes.maven.plugins.dmg</groupId>
                <artifactId>doxygen-maven-plugin</artifactId>
                <version>1.0.1</version>
                <configuration>
                    <projectName>${project.name}</projectName>
                    <projectNumber>${project.version}</projectNumber>
                    <optimizeOutputJava>true</optimizeOutputJava>
                    <extractAll>true</extractAll>
                    <extractStatic>true</extractStatic>
                    <recursive>true</recursive>
                    <exclude>.git</exclude>
                    <excludePatterns>*/test/*</excludePatterns>
                    <inlineSources>true</inlineSources>
                    <referencedByRelation>true</referencedByRelation>
                    <referencesRelation>true</referencesRelation>
                    <hideUndocRelations>false</hideUndocRelations>
                    <umlLook>true</umlLook>
                    <callGraph>true</callGraph>
                    <callerGraph>true</callerGraph>
                    <generateLatex>true</generateLatex>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jxr-plugin</artifactId>
                <version>2.5</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-linkcheck-plugin</artifactId>
                <version>1.2</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-changelog-plugin</artifactId>
                <version>2.3</version>
            </plugin>
        </plugins>
    </reporting>

    <profiles>
        <profile>
            <id>java8-disable-strict-javadoc</id>
            <activation>
                <jdk>[1.8,)</jdk>
            </activation>
            <properties>
                <javadoc.doclint.none>-Xdoclint:none</javadoc.doclint.none>
            </properties>
        </profile>
    </profiles>

</project>
